--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/employeeDB
+#spring.datasource.url=jdbc:mysql://localhost:3306/empDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=KRawat@2212
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,4 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.connection.isolation=2
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
